--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -32,7 +32,7 @@
   box-shadow: 0 0 25px rgba(185, 35, 225, 0.4);
 }
 .skill-section h2 {
-  color: #fff;
+  color: #ebebeb;
   font-size: 2rem;
   margin-bottom: 1.5rem;
 }
@@ -51,48 +51,58 @@
 
 /* Tablet */
 @media (max-width: 1024px) { 
-  .skills-title h1 {
-    font-size: 3.75rem; 
+  .skill-section h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
   }
-  .skills-list {
-    font-size: 1.25rem; 
-    gap: 1rem; 
+  .skill-section ul {
+  list-style-type: disc;
+  padding-left: 1.5rem;
   }
-  .skills-list span {
-    font-size: 1.75rem;
+  .skill-section ul li {
+    font-size: 1.25rem;
+    margin-bottom: 0.75rem;
+    color: #dddbdb;
+  }
+  .skill-section ul li span {
+    font-weight: bold;
   }
 }
 
 /* Small tablet / large phone */
 @media (max-width: 768px) { 
-  .skills-title h1 {
-    font-size: 3.125rem; 
-    text-align: center;
+    .skill-section h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
   }
-  .skills-list {
-    font-size: 1.125rem; 
-    gap: 0.875rem; 
+  .skill-section ul {
+    list-style-type: disc;
+    padding-left: 1.5rem;
   }
-  .skills-list span {
-    font-size: 1.625rem; 
+  .skill-section ul li {
+    font-size: 1.25rem;
+    margin-bottom: 0.75rem;
+    color: #dddbdb;
+  }
+  .skill-section ul li span {
+    font-weight: bold;
   }
 }
 
 /* Mobile */
 @media (max-width: 480px) {
-  .skills-title h1 {
-    font-size: 2.25rem; 
+  .skill-section h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1.25rem;
   }
-  .skills-list {
-    min-width: 0;
-    flex-shrink: 0;
-    font-size: 1rem; 
-    gap: 0.75rem; 
+  .skill-section ul {
+    list-style-type: disc;
+    padding-left: 1.5rem;
   }
-  .skills-list h3 {
-    font-size: 1.5rem; 
+  .skill-section ul li {
+    font-size: 1.125rem; 
   }
-  .skills-list li {
-    flex-direction: column;
+  .skill-section ul li span {
+    font-weight: bold;
   }
 }
