--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -32,9 +32,9 @@
   box-shadow: 0 0 25px rgba(185, 35, 225, 0.4);
 }
 .skill-section h2 {
-  color: #ebebeb;
+  color: #a73bc5;
   font-size: 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 .skill-section ul {
   list-style-type: disc;
@@ -42,11 +42,15 @@
 }
 .skill-section ul li {
   font-size: 1.25rem;
-  margin-bottom: 0.75rem;
+  margin-bottom: 0.5rem;
   color: #dddbdb;
 }
 .skill-section ul li span {
   font-weight: bold;
+}
+.skill-section p {
+  font-size: 1.25rem;
+  color: #dddbdb;
 }
 
 /* Tablet */
