--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -13,6 +13,20 @@
   display: inline-block;
   overflow: visible; 
 }
+.skills-para {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 900px;
+    margin: 0 auto;
+    font-size: 1.25rem; 
+    color: #ebebeb;
+}
+.skills-para p .highlight {
+    color: #d7a9e4; 
+}
 .skills-list {
   max-width: 900px;
   margin: 0 auto;
@@ -46,11 +60,7 @@
   color: #dddbdb;
 }
 .skill-section ul li span {
-  font-weight: bold;
-}
-.skill-section p {
-  font-size: 1.25rem;
-  color: #dddbdb;
+  font-weight: 800;
 }
 
 /* Tablet */
