--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3.5rem;
+    gap: 1.5rem;
     max-width: 75rem;
-    margin: 5rem auto;
-    padding: 0 1.25rem;
+    margin: 2rem auto;
+    padding: 0 1.5rem;
 }
 .contact-title {
     position: relative;
@@ -25,7 +25,7 @@
     gap: 1.875rem; 
 }
 .contact-left p {
-    font-size: 1.25rem; 
+    font-size: 1rem; 
 }
 .contact-details {
     display: flex;
@@ -65,7 +65,7 @@
     gap: 1.25rem; 
 }
 .contact-right label {
-    font-size: 1.375rem; 
+    font-size: 1rem; 
     font-weight: 500;
     color: #ebebeb;
 }
@@ -77,7 +77,7 @@
     border-radius: 0.25rem; 
     background: rgba(185, 35, 225, 0.1);
     color: #dddbdb;
-    font-size: 1.25rem; 
+    font-size: 1rem; 
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
@@ -92,7 +92,7 @@
     background: transparent;
     border-radius: 3.125rem; 
     border: 0.125rem solid #b923e1; 
-    font-size: 1.375rem; 
+    font-size: 1rem; 
     color: #b923e1;
     padding: 1.25rem 2.5rem; 
     cursor: pointer;
@@ -151,12 +151,12 @@
 
 /* Mobile */
 @media (max-width: 480px) {
-    .contact-title h1 {
-        font-size: 2.25rem; 
+    .contact-title text {
+        font-size: 60px; 
     }
     .contact-left p {
         font-size: 1rem; 
-        line-height: 1.625rem; 
+        line-height: 1.25rem; 
     }
     .contact-submit {
         padding: 1rem 2.5rem; 
