--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,15 +3,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3.5rem;
+    gap: 1.5rem;
     max-width: 75rem; 
-    margin: 3.75rem auto; 
-    padding: 0 1.25rem; 
+    margin: 2rem auto; 
+    padding: 0 1.5rem; 
 }
 .home-img {
     margin-top: 1rem;
-    width: 15rem;  
-    height: 15rem; 
+    width: 12rem;  
+    height: 12rem; 
     object-fit: cover;
     border-radius: 50%;
     border: 0.125rem solid #b923e1;
@@ -28,7 +28,7 @@
     width: 90%;
 }
 .home p {
-    font-size: 1.5rem; 
+    font-size: 1rem; 
     text-align: center;
     color: #ebebeb;
 }
@@ -47,7 +47,7 @@
 .home-resume a {
     display: inline-block;
     text-decoration: none;
-    font-size: 1.375rem; 
+    font-size: 1rem; 
     color: #b923e1;
     padding: 1.25rem 2.5rem; 
     border-radius: 3.125rem; 
@@ -113,17 +113,19 @@
 
 /* Mobile */
 @media (max-width: 480px) {
-  .home-title {
-    font-size: 2.5rem; 
-    width: 100%;
+  .home {
+    gap: 1rem; 
+  }
+  .home-title text {
+      font-size: 60px; 
   }
   .home p {
     width: 90%;
-    font-size: 1.125rem; 
-    line-height: 1.875rem; 
+    font-size: 1rem; 
+    line-height: 1.5rem; 
   }
   .home-action {
-    gap: 0.625rem; 
+    gap: 0.5rem; 
   }
   .home-connect, 
   .home-resume {
@@ -131,6 +133,10 @@
     max-width: 17.5rem; 
   }
   .home-connect a {
-    padding: 1.25rem 2rem; 
+    padding: 1rem 2rem; 
+  }
+  .home-img {
+    width: 10rem;  
+    height: 10rem; 
   }
 }
