--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3.5rem;
+    gap: 1.5rem;
     max-width: 75rem;
-    margin: 5rem auto;
-    padding: 0 1.25rem;
+    margin: 2rem auto;
+    padding: 0 1.5rem;
 }
 .portfolio-title {
     position: relative;
@@ -21,7 +21,7 @@
     text-align: center;
     max-width: 900px;
     margin: 0 auto;
-    font-size: 1.25rem; 
+    font-size: 1rem; 
     color: #ebebeb;
 }
 .portfolio-para p + p {
@@ -111,16 +111,16 @@
     .portfolio {
         gap: 1rem; 
     }
-    .portfolio-title h1 {
-        font-size: 2.25rem; 
+    .portfolio-title text {
+        font-size: 60px; 
     }
     .portfolio-para {
-        font-size: 1.125rem; 
+        font-size: 1rem; 
         gap: 0.5rem; 
     }
     .portfolio-para img {
-        width: 95%;
-        height: 95%;
+        width: 70%;
+        height: 70%;
     }
     .portfolio-container {
         width: 90%;
