--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3.5rem;
+    gap: 1.5rem;
     max-width: 75rem;
-    margin: 5rem auto;
-    padding: 0 1.25rem;
+    margin: 2rem auto;
+    padding: 0 1.5rem;
 }
 .skills-title {
   position: relative;
@@ -21,7 +21,7 @@
     text-align: center;
     max-width: 900px;
     margin: 0 auto;
-    font-size: 1.25rem; 
+    font-size: 1rem; 
     color: #ebebeb;
 }
 .skills-para p .highlight {
@@ -47,15 +47,15 @@
 }
 .skill-section h2 {
   color: #a73bc5;
-  font-size: 2rem;
+  font-size: 1.75rem;
   margin-bottom: 1rem;
 }
 .skill-section ul {
   list-style-type: disc;
-  padding-left: 1.5rem;
+  padding-left: 1rem;
 }
 .skill-section ul li {
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin-bottom: 0.5rem;
   color: #dddbdb;
 }
@@ -105,16 +105,19 @@
 
 /* Mobile */
 @media (max-width: 480px) {
+  .skills-title text {
+      font-size: 60px; 
+  }
   .skill-section h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
   }
   .skill-section ul {
     list-style-type: disc;
-    padding-left: 1.5rem;
+    padding-left: 1rem;
   }
   .skill-section ul li {
-    font-size: 1.125rem; 
+    font-size: 1rem; 
   }
   .skill-section ul li span {
     font-weight: bold;
