--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -21,7 +21,7 @@
     text-align: center;
     max-width: 900px;
     margin: 0 auto;
-    font-size: 1rem; 
+    font-size: 1.25rem; 
     color: #ebebeb;
 }
 .portfolio-para p + p {
@@ -30,10 +30,11 @@
 .portfolio-para p .highlight {
     color: #d7a9e4; 
 }
-.portfolio-para img {
-    margin: 1.5rem 0;
+.repo-para {
+    margin-bottom: 2rem; 
+}
+.portfolio-img a img {
     width: 2.5rem;
-    height: 2.5rem;
 }
 .portfolio-para a{
     display: inline-block; 
@@ -57,8 +58,8 @@
 .portfolio-container img {
     width: 100%;
     height: auto;
-    aspect-ratio: 3 / 2;
-    object-fit: contain;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
     max-width: 100%;
     border-radius: 0.625rem; 
     cursor: pointer;
@@ -117,6 +118,7 @@
     .portfolio-para {
         font-size: 1rem; 
         gap: 0.5rem; 
+        line-height: 1.25;
     }
     .portfolio-para img {
         width: 70%;
