--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1.5rem;
+    gap: 2rem;
     max-width: 75rem;
     margin: 2rem auto;
     padding: 0 1.5rem;
@@ -20,8 +20,9 @@
     justify-content: center;
     text-align: center;
     max-width: 900px;
-    margin: 0 auto;
-    font-size: 1rem; 
+    margin-bottom: 1.5rem;
+    font-size: 1.25rem; 
+    line-height: 1.5;
     color: #ebebeb;
 }
 .skills-para p .highlight {
@@ -47,7 +48,7 @@
 }
 .skill-section h2 {
   color: #a73bc5;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 .skill-section ul {
@@ -55,7 +56,7 @@
   padding-left: 1rem;
 }
 .skill-section ul li {
-  font-size: 1rem;
+  font-size: 1.25rem;
   margin-bottom: 0.5rem;
   color: #dddbdb;
 }
@@ -85,16 +86,15 @@
 
 /* Small tablet / large phone */
 @media (max-width: 768px) { 
-    .skill-section h2 {
-    font-size: 2rem;
-    margin-bottom: 1.5rem;
+  .skills-para {
+    font-size: 1.25rem;
   }
   .skill-section ul {
     list-style-type: disc;
     padding-left: 1.5rem;
   }
   .skill-section ul li {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     margin-bottom: 0.75rem;
     color: #dddbdb;
   }
@@ -108,6 +108,11 @@
   .skills-title text {
       font-size: 60px; 
   }
+  .skills-para {
+    margin-bottom: 1.75rem;
+    line-height: 1.5;
+    font-size: 1rem;
+  }
   .skill-section h2 {
     font-size: 1.25rem;
     margin-bottom: 1rem;
@@ -118,6 +123,7 @@
   }
   .skill-section ul li {
     font-size: 1rem; 
+    line-height: 1.25;
   }
   .skill-section ul li span {
     font-weight: bold;
