--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
-html, body {
+html, body, #root {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 body {
   background: #221722;
